--- a/CinemaWeb.csproj
+++ b/CinemaWeb.csproj
@@ -261,6 +261,7 @@
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Areas\User\assets\css\profilestyle.css" />
     <Content Include="Areas\User\assets\css\userstyle.css" />
     <Content Include="Areas\User\assets\css\bootstrap-grid.css" />
     <Content Include="Areas\User\assets\css\bootstrap-grid.min.css" />
@@ -282,6 +283,7 @@
     <Content Include="Areas\User\assets\images\logo\icon-gift.190935e4.png" />
     <Content Include="Areas\User\assets\images\logo\logomini.png" />
     <Content Include="Areas\User\assets\images\logo\silver.6313aa20.png" />
+    <Content Include="Areas\User\assets\js\profilescript.js" />
     <Content Include="Areas\User\assets\js\userscripts.js" />
     <Content Include="assets\css\signin.css" />
     <Content Include="assets\css\layout.css" />
@@ -1170,6 +1172,7 @@
     <Content Include="FE_Q\assets\js\bootstrap.min.js.map" />
     <Content Include="Areas\User\Views\UserAccount\UserProfile.cshtml" />
     <Content Include="Areas\User\Views\UserHome\UserProfile.cshtml" />
+    <Content Include="Areas\User\Views\UserHome\HistoryTicket.cshtml" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
