xong movie detail

--- a/CinemaWeb.csproj
+++ b/CinemaWeb.csproj
@@ -278,6 +278,7 @@
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Areas\User\assets\css\moviedetail.css" />
     <Content Include="Areas\User\assets\css\profilestyle.css" />
     <Content Include="Areas\User\assets\css\bookticket.css" />
     <Content Include="Areas\User\assets\css\userstyle.css" />
@@ -297,10 +298,12 @@
     <Content Include="Areas\User\assets\css\bootstrap.min.css" />
     <Content Include="Areas\User\assets\css\bootstrap.rtl.css" />
     <Content Include="Areas\User\assets\css\bootstrap.rtl.min.css" />
+    <Content Include="Areas\User\assets\images\btn\button-play.2f9c0030.png" />
     <Content Include="Areas\User\assets\images\logo\gold.ff661579.png" />
     <Content Include="Areas\User\assets\images\logo\icon-gift.190935e4.png" />
     <Content Include="Areas\User\assets\images\logo\logomini.png" />
     <Content Include="Areas\User\assets\images\logo\silver.6313aa20.png" />
+    <Content Include="Areas\User\assets\js\moviedetail.js" />
     <Content Include="Areas\User\assets\js\profilescript.js" />
     <Content Include="Areas\User\assets\js\bookticket.js" />
     <Content Include="Areas\User\assets\js\userscripts.js" />
@@ -666,6 +669,7 @@
     <Content Include="assets\font\themify-icons\SVG\zoom-in.svg" />
     <Content Include="assets\font\themify-icons\SVG\zoom-out.svg" />
     <Content Include="assets\font\themify-icons\themify-icons.css" />
+    <Content Include="assets\images\movie\exhumangang.jpg" />
     <Content Include="assets\images\movie\unname-movie.svg" />
     <Content Include="assets\images\subimg\account.png" />
     <Content Include="assets\images\subimg\btn-ticket.png" />
@@ -1084,18 +1088,45 @@
     <Content Include="FE_Q\assets\fonts\themify-icons\SVG\zoom-out.svg" />
     <Content Include="FE_Q\assets\fonts\themify-icons\themify-icons.css" />
     <Content Include="FE_Q\assets\images\account.png" />
+    <Content Include="FE_Q\assets\images\actor\lee-byung-hun-dung-tai-nang-tay-trang-bao-be-boi-5_1660990556413.jpg" />
+    <Content Include="FE_Q\assets\images\actor\lee-byung-hun-dung-tai-nang-tay-trang-bao-be-boi-7_1660990564989.jpg" />
+    <Content Include="FE_Q\assets\images\actor\ma-dong-seok4_1599204363952.png" />
+    <Content Include="FE_Q\assets\images\actor\ma-dong-seok5_1599204450802.png" />
+    <Content Include="FE_Q\assets\images\actor\ma-dong-seok6_1599204825651.jpg" />
+    <Content Include="FE_Q\assets\images\actor\ma-dong-seok7_1599204789702.jpg" />
+    <Content Include="FE_Q\assets\images\actor\ma-dong-seok8_1599204758882.jpg" />
     <Content Include="FE_Q\assets\images\btn-ticket.png" />
     <Content Include="FE_Q\assets\images\button-play.2f9c0030.png" />
     <Content Include="FE_Q\assets\images\cinema-logo.png" />
+    <Content Include="FE_Q\assets\images\director\75ee82f4d66dc6458306b811aff66370a269cd9d_1599240814983.jpg" />
+    <Content Include="FE_Q\assets\images\director\aquaman-750_1703216431428.jpg" />
+    <Content Include="FE_Q\assets\images\director\james-wan-1_1640143202218.jpeg" />
+    <Content Include="FE_Q\assets\images\director\james-wan-1_1640143206298.jpg" />
+    <Content Include="FE_Q\assets\images\director\james-wan-2_1640143104851.jpg" />
+    <Content Include="FE_Q\assets\images\director\james-wan-3_1640143119922.jpg" />
+    <Content Include="FE_Q\assets\images\director\james-wan-premiere-death-sentence-01.jpg" />
+    <Content Include="FE_Q\assets\images\director\lebaotrung.jpg" />
+    <Content Include="FE_Q\assets\images\director\malignant-james-wan-4_1634895384659.jpg" />
+    <Content Include="FE_Q\assets\images\director\the-conjuring-2-banner-preview.jpg" />
+    <Content Include="FE_Q\assets\images\director\wan1.jpg" />
     <Content Include="FE_Q\assets\images\gold.ff661579.png" />
     <Content Include="FE_Q\assets\images\gstar.svg" />
     <Content Include="FE_Q\assets\images\icon-gift.190935e4.png" />
     <Content Include="FE_Q\assets\images\logomini.png" />
     <Content Include="FE_Q\assets\images\movie.pnj.svg" />
+    <Content Include="FE_Q\assets\images\movie\24_1.png" />
+    <Content Include="FE_Q\assets\images\movie\450x300_1685674204080.jpg" />
+    <Content Include="FE_Q\assets\images\movie\cai-gia-cua-hanh-phuc-1_1712733174711.jpg" />
     <Content Include="FE_Q\assets\images\movie\dune-2.jpg" />
     <Content Include="FE_Q\assets\images\movie\exhuma.jpg" />
+    <Content Include="FE_Q\assets\images\movie\exhumangang.jpg" />
+    <Content Include="FE_Q\assets\images\movie\ghostbusters-frozen-empire-750_1712719795646.jpg" />
+    <Content Include="FE_Q\assets\images\movie\god-x-kong-750_1711942287259.jpg" />
     <Content Include="FE_Q\assets\images\movie\kungfu-panda-4.jpg" />
+    <Content Include="FE_Q\assets\images\movie\ma-dong-seok5_1599204402167.png" />
     <Content Include="FE_Q\assets\images\movie\qu-co-thua-ke-2.jpg" />
+    <Content Include="FE_Q\assets\images\movie\roundup-750_1713513441808.jpg" />
+    <Content Include="FE_Q\assets\images\movie\trum-com-ac-quy6_1558682370589.jpg" />
     <Content Include="FE_Q\assets\images\silver.6313aa20.png" />
     <Content Include="FE_Q\assets\images\slider\demonslayer.jpg" />
     <Content Include="FE_Q\assets\images\slider\exhuma.jpg" />
@@ -1199,6 +1230,7 @@
     <Content Include="Models\Model1.edmx.diagram">
       <DependentUpon>Model1.edmx</DependentUpon>
     </Content>
+    <Content Include="Areas\User\Views\BookTicket\MovieDetail.cshtml" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
