--- a/Web.config
+++ b/Web.config
@@ -17,6 +17,12 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+
+	  <add key="vnp_Url" value="https://sandbox.vnpayment.vn/paymentv2/vpcpay.html"/>
+	  <add key="vnp_Api" value="https://sandbox.vnpayment.vn/merchant_webapi/api/transaction"/>
+	  <add key="vnp_TmnCode" value="77YOTOFV"/>
+	  <add key="vnp_HashSecret" value="DMPOJPMSCPTLEGQWXMXJBNCLNKVOKXCQ"/>
+	  <add key="vnp_Returnurl" value="http://localhost:16262/vnpay_return.aspx"/>
   </appSettings>
   <system.web>
     <authentication mode="None" />
