--- a/Web.config
+++ b/Web.config
@@ -23,6 +23,9 @@
 	  <add key="vnp_TmnCode" value="77YOTOFV"/>
 	  <add key="vnp_HashSecret" value="DMPOJPMSCPTLEGQWXMXJBNCLNKVOKXCQ"/>
 	  <add key="vnp_Returnurl" value="http://localhost:16262/vnpay_return.aspx"/>
+	  <add key="vnp_Command" value="pay"/>
+	  <add key="vnp_CurrCode" value="VND"/>
+	  <add key="vnp_Locale" value="vn"/>
   </appSettings>
   <system.web>
     <authentication mode="None" />
