lưu dữ liệu vào hóa đơn khi đặt vé, thêm chức năng thanh toán nhma đang lỗi

--- a/Web.config
+++ b/Web.config
@@ -22,10 +22,7 @@
 	  <add key="vnp_Api" value="https://sandbox.vnpayment.vn/merchant_webapi/api/transaction"/>
 	  <add key="vnp_TmnCode" value="77YOTOFV"/>
 	  <add key="vnp_HashSecret" value="DMPOJPMSCPTLEGQWXMXJBNCLNKVOKXCQ"/>
-	  <add key="vnp_Returnurl" value="http://localhost:16262/vnpay_return.aspx"/>
-	  <add key="vnp_Command" value="pay"/>
-	  <add key="vnp_CurrCode" value="VND"/>
-	  <add key="vnp_Locale" value="vn"/>
+	  <add key="vnp_Returnurl" value="https://localhost:44323/User/BookTicket/VnPayReturn"/>
   </appSettings>
   <system.web>
     <authentication mode="None" />
