--- a/CinemaWeb.csproj
+++ b/CinemaWeb.csproj
@@ -277,7 +277,7 @@
     <Compile Include="Models\user_type_user_role.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
-    <Compile Include="Models\VnPayLibrary.cs" />
+    <Compile Include="Models\Payment\VnPayLibrary.cs" />
     <Compile Include="Models\VnPaymentResponseModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -1168,7 +1168,6 @@
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Areas\Admin\Views\web.config" />
-    <Content Include="Areas\User\Views\web.config" />
     <Content Include="Areas\Admin\Views\AdminHome\Index.cshtml" />
     <Content Include="Areas\User\assets\css\bootstrap-grid.css.map" />
     <Content Include="Areas\User\assets\css\bootstrap-grid.min.css.map" />
@@ -1236,6 +1235,8 @@
     <Content Include="Models\Model1.edmx.diagram">
       <DependentUpon>Model1.edmx</DependentUpon>
     </Content>
+    <Content Include="Areas\User\Views\BookTicket\VnPayReturn.cshtml" />
+    <Content Include="Areas\User\Views\web.config" />
     <None Include="Properties\PublishProfiles\thanhhuy2004-001-site1 - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
