--- a/Web.config
+++ b/Web.config
@@ -18,11 +18,11 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
 
-	  <add key="vnp_Url" value="https://sandbox.vnpayment.vn/paymentv2/vpcpay.html"/>
-	  <add key="vnp_Api" value="https://sandbox.vnpayment.vn/merchant_webapi/api/transaction"/>
-	  <add key="vnp_TmnCode" value="77YOTOFV"/>
-	  <add key="vnp_HashSecret" value="DMPOJPMSCPTLEGQWXMXJBNCLNKVOKXCQ"/>
-	  <add key="vnp_Returnurl" value="https://localhost:44323/User/BookTicket/VnPayReturn"/>
+	  <add key="vnp_Url" value="https://sandbox.vnpayment.vn/paymentv2/vpcpay.html" />
+	  <add key="vnp_Api" value="https://sandbox.vnpayment.vn/merchant_webapi/api/transaction" />
+	  <add key="vnp_TmnCode" value="I2DUY0MR" />
+	  <add key="vnp_HashSecret" value="ILMEHUMFDTUARBMLLSMLDSWXOEVGYKHE" />
+	  <add key="vnp_Returnurl" value="https://localhost:44323/User/BookTicket/VnPayReturn" />
   </appSettings>
   <system.web>
     <authentication mode="None" />
@@ -83,6 +83,10 @@
       <dependentAssembly>
         <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" />
         <bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Memory" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.1.1" newVersion="4.0.1.1" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
