--- a/CinemaWeb.csproj
+++ b/CinemaWeb.csproj
@@ -280,8 +280,12 @@
     <Compile Include="Models\seat.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\seat_status.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\Services\IVnPayService.cs" />
     <Compile Include="Models\Services\VnPayService.cs" />
+    <Compile Include="Models\Payment\VnPayLibrary.cs" />
     <Compile Include="Models\star_rating.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -306,7 +310,6 @@
     <Compile Include="Models\user_type_user_role.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
-    <Compile Include="Models\Payment\VnPayLibrary.cs" />
     <Compile Include="Models\VnPaymentResponseModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -1270,6 +1273,12 @@
     <Content Include="Areas\User\Views\UserHome\HistoryTicket.cshtml" />
     <Content Include="Areas\User\Views\BookTicket\BookTicket.cshtml" />
     <Content Include="Areas\User\Views\BookTicket\MovieDetail.cshtml" />
+    <Content Include="Areas\User\Views\BookTicket\VnPayReturn.cshtml" />
+    <Content Include="Areas\User\Views\web.config" />
+    <Content Include="Areas\Admin\Views\Index.cshtml" />
+    <Content Include="Areas\User\Views\BookTicket\PaymentSuccess.cshtml" />
+    <Content Include="Areas\User\Views\BookTicket\PaymentFail.cshtml" />
+    <Content Include="Areas\User\Views\BookTicket\MovieType.cshtml" />
     <EntityDeploy Include="Models\Model1.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
       <LastGenOutput>Model1.Designer.cs</LastGenOutput>
@@ -1277,12 +1286,6 @@
     <Content Include="Models\Model1.edmx.diagram">
       <DependentUpon>Model1.edmx</DependentUpon>
     </Content>
-    <Content Include="Areas\User\Views\BookTicket\VnPayReturn.cshtml" />
-    <Content Include="Areas\User\Views\web.config" />
-    <Content Include="Areas\Admin\Views\Index.cshtml" />
-    <Content Include="Areas\User\Views\BookTicket\PaymentSuccess.cshtml" />
-    <Content Include="Areas\User\Views\BookTicket\PaymentFail.cshtml" />
-    <Content Include="Areas\User\Views\BookTicket\MovieType.cshtml" />
     <None Include="Properties\PublishProfiles\thanhhuy2004-001-site1 - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
