--- a/CinemaWeb.csproj
+++ b/CinemaWeb.csproj
@@ -57,6 +57,11 @@
       <HintPath>packages\Microsoft.Bcl.AsyncInterfaces.1.1.0\lib\net461\Microsoft.Bcl.AsyncInterfaces.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="PresentationCore" />
+    <Reference Include="PresentationFramework" />
+    <Reference Include="QRCoder, Version=1.5.1.0, Culture=neutral, PublicKeyToken=c4ed5b9ae8358a28, processorArchitecture=MSIL">
+      <HintPath>packages\QRCoder.1.5.1\lib\net40\QRCoder.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Buffers, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>packages\System.Buffers.4.5.1\lib\net461\System.Buffers.dll</HintPath>
@@ -142,6 +147,7 @@
       <Private>True</Private>
       <HintPath>packages\Antlr.3.5.0.2\lib\Antlr3.Runtime.dll</HintPath>
     </Reference>
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="EntityFramework">
@@ -203,6 +209,7 @@
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Areas\Admin\AdminAreaRegistration.cs" />
     <Compile Include="Areas\Admin\Controllers\AdminHomeController.cs" />
+    <Compile Include="Areas\User\Common\Common.cs" />
     <Compile Include="Areas\User\Controllers\BookTicketController.cs" />
     <Compile Include="Areas\User\Controllers\UserAccountController.cs" />
     <Compile Include="Areas\User\Controllers\UserHomeController.cs" />
@@ -345,6 +352,7 @@
     <Content Include="Areas\User\assets\js\profilescript.js" />
     <Content Include="Areas\User\assets\js\bookticket.js" />
     <Content Include="Areas\User\assets\js\userscripts.js" />
+    <Content Include="Areas\User\Common\invoice.html" />
     <Content Include="assets\css\signin.css" />
     <Content Include="assets\css\layout.css" />
     <Content Include="assets\css\style.css" />
@@ -1339,6 +1347,7 @@
     <Folder Include="Areas\Admin\Views\Shared\" />
     <Folder Include="Areas\User\assets\fonts\" />
     <Folder Include="Areas\User\Data\" />
+    <Folder Include="Areas\User\Views\Common\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.rtl.min.css.map" />
