Thêm gửi mail về khi đặt vé, fix xong bug thanh toán

--- a/Web.config
+++ b/Web.config
@@ -17,6 +17,8 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+	  <add key ="PasswordEmail" value="tictgqrdumfdwyip"/>
+	  <add key="Email" value="service.ohayoucinema@gmail.com"/>
     <add key="vnp_Url" value="https://sandbox.vnpayment.vn/paymentv2/vpcpay.html" />
     <add key="vnp_Api" value="https://sandbox.vnpayment.vn/merchant_webapi/api/transaction" />
     <add key="vnp_TmnCode" value="I2DUY0MR" />
