--- a/packages.config
+++ b/packages.config
@@ -30,6 +30,7 @@
   <package id="Modernizr" version="2.8.3" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net472" />
   <package id="Owin" version="1.0" targetFramework="net472" />
+  <package id="QRCoder" version="1.5.1" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.7.1" targetFramework="net472" />
   <package id="System.Memory" version="4.5.4" targetFramework="net472" />
