--- a/packages.config
+++ b/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AForge" version="2.2.5" targetFramework="net472" />
+  <package id="AForge.Video" version="2.2.5" targetFramework="net472" />
+  <package id="AForge.Video.DirectShow" version="2.2.5" targetFramework="net472" />
   <package id="Antlr" version="3.5.0.2" targetFramework="net472" />
   <package id="Autofac" version="6.4.0" targetFramework="net472" />
   <package id="Autofac.Mvc5" version="6.1.0" targetFramework="net472" />
@@ -38,4 +41,5 @@
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.3" targetFramework="net472" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net472" />
   <package id="WebGrease" version="1.6.0" targetFramework="net472" />
+  <package id="ZXing.Net" version="0.16.9" targetFramework="net472" />
 </packages>
