--- a/packages.config
+++ b/packages.config
@@ -6,6 +6,7 @@
   <package id="Antlr" version="3.5.0.2" targetFramework="net472" />
   <package id="Autofac" version="6.4.0" targetFramework="net472" />
   <package id="Autofac.Mvc5" version="6.1.0" targetFramework="net472" />
+  <package id="BCrypt.Net-Next" version="4.0.3" targetFramework="net472" />
   <package id="bootstrap" version="5.2.3" targetFramework="net472" />
   <package id="EntityFramework" version="6.4.4" targetFramework="net472" />
   <package id="jQuery" version="3.4.1" targetFramework="net472" />
