--- a/packages.config
+++ b/packages.config
@@ -9,6 +9,7 @@
   <package id="BCrypt.Net-Next" version="4.0.3" targetFramework="net472" />
   <package id="bootstrap" version="5.2.3" targetFramework="net472" />
   <package id="EntityFramework" version="6.4.4" targetFramework="net472" />
+  <package id="Hangfire.Core" version="1.8.12" targetFramework="net472" />
   <package id="jQuery" version="3.4.1" targetFramework="net472" />
   <package id="jQuery.Validation" version="1.17.0" targetFramework="net472" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.4" targetFramework="net472" />
@@ -20,6 +21,7 @@
   <package id="Microsoft.AspNet.WebPages" version="3.2.9" targetFramework="net472" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.0" targetFramework="net472" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="2.1.1" targetFramework="net472" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.11" targetFramework="net472" />
   <package id="Microsoft.Owin" version="4.2.2" targetFramework="net472" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="4.2.2" targetFramework="net472" />
@@ -35,6 +37,7 @@
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net472" />
   <package id="Owin" version="1.0" targetFramework="net472" />
   <package id="QRCoder" version="1.5.1" targetFramework="net472" />
+  <package id="Quartz" version="3.9.0" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.7.1" targetFramework="net472" />
   <package id="System.Memory" version="4.5.4" targetFramework="net472" />
