--- a/CinemaWeb.csproj
+++ b/CinemaWeb.csproj
@@ -350,7 +350,10 @@
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QuartzConfig.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="SupportFile\ChangeSeatStatusJob.cs" />
+    <Compile Include="SupportFile\DeleteNotificationJob.cs" />
     <Compile Include="SupportFile\NotificationJob.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -470,6 +473,8 @@
     <Content Include="Areas\User\assets\css\ohayoucinema.css" />
     <Content Include="Areas\User\assets\css\movietype.css" />
     <Content Include="Areas\User\assets\css\moviedetail.css" />
+    <Content Include="Areas\User\assets\css\payfailstyle.css" />
+    <Content Include="Areas\User\assets\css\paysuccessstyle.css" />
     <Content Include="Areas\User\assets\css\profilestyle.css" />
     <Content Include="Areas\User\assets\css\bookticket.css" />
     <Content Include="Areas\User\assets\css\userstyle.css" />
@@ -933,7 +938,6 @@
     <Content Include="FE_H\img\notification-03.jpg" />
     <Content Include="FE_H\img\product-image.jpg" />
     <Content Include="FE_H\img\qu-co-thua-ke-2.jpg" />
-    <Content Include="FE_H\index.html" />
     <Content Include="FE_H\jquery-ui-datepicker\AUTHORS.txt" />
     <Content Include="FE_H\jquery-ui-datepicker\external\jquery\jquery.js" />
     <Content Include="FE_H\jquery-ui-datepicker\images\ui-bg_glass_75_d0e5f5_1x400.png" />
@@ -1652,6 +1656,8 @@
     <Content Include="Models\Model1.edmx.diagram">
       <DependentUpon>Model1.edmx</DependentUpon>
     </Content>
+    <None Include="Properties\PublishProfiles\hothanhhuy2004-001-site1 - FTP.pubxml" />
+    <None Include="Properties\PublishProfiles\hothanhhuy2004-001-site1 - Web Deploy.pubxml" />
     <None Include="Properties\PublishProfiles\thanhhuy2004-001-site1 - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
