--- a/Web.config
+++ b/Web.config
@@ -10,7 +10,10 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-CinemaWeb-20240404013434.mdf;Initial Catalog=aspnet-CinemaWeb-20240404013434;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <!--<add name ="Cinema_Web_Entities" connectionString="Data Source=SQL8010.site4now.net;Initial Catalog=db_aa873f_cinemaweb;Persist Security Info=True;User ID=db_aa873f_cinemaweb_admin;Password=huyho2004;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient"/>-->
+	  <!--<add name="Cinema_Web_Entities"
+         connectionString="metadata=res://*/;provider=System.Data.SqlClient;provider connection string='Data Source=SQL8010.site4now.net;Initial Catalog=db_aa873f_cinemadatabase;Persist Security Info=True;User ID=db_aa873f_cinemadatabase_admin;Password=huyho2004;MultipleActiveResultSets=True;App=EntityFramework'"
+         providerName="System.Data.EntityClient"/>-->
+	  
     <add name="Cinema_Web_Entities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-ON0SMID\HUYTHANH;initial catalog=Cinema_Web;persist security info=True;user id=sa;password=huyho2004;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
